WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128380
[GTK] Minibrowser: Matched words of a searched text are not highlighted after reopening search bar
https://bugs.webkit.org/show_bug.cgi?id=128380
Summary
[GTK] Minibrowser: Matched words of a searched text are not highlighted after...
Diego Pino
Reported
2014-02-07 09:53:01 PST
In Minibrowser, when searching for some text in a page, all matches are highlighted. Clicking on the Up and Down buttons in the search bar, navigates through the list of matched words. When the search bar is closed down, all the marked words are unhighlighted. However, when the search bar is reopened, although the search bar still contains the results of the latest search (and in fact, it is possible to navigate through the list of matched words using the Up and Down buttons), the words are not highlighted. Steps to reproduce: 1. Open a the Minibrowser with the default URL (
http://www.webkitgtk.org/
) for instance. 2. Press Ctrl+F to open the search bar and type "the". 3. All the "the" words will be highlighted. Navigate through the list of matched words. 4. Close the search bar. 5. Press Ctrl+F to open the search bar again. 6. The search bar contains the results of the last search. It's possible to navigate through the list of matches but there are no highlighted words. Expected result: When opening the search bar again, highlight the matched words of the last search. Notice that when reopening the search bar, its edit box is not empty but contains the last searched text.
Attachments
Patch
(3.61 KB, patch)
2014-02-07 09:59 PST
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Patch
(1.64 KB, patch)
2014-02-07 10:35 PST
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Patch
(1.65 KB, patch)
2014-02-07 12:50 PST
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2014-02-07 09:59:45 PST
Created
attachment 223462
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-07 10:00:26 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2014-02-07 10:05:44 PST
I would be great if we could add a unit tests for this case.
Diego Pino
Comment 4
2014-02-07 10:35:50 PST
Created
attachment 223471
[details]
Patch
Diego Pino
Comment 5
2014-02-07 12:50:15 PST
Created
attachment 223484
[details]
Patch
WebKit Commit Bot
Comment 6
2014-02-08 00:22:05 PST
Comment on
attachment 223484
[details]
Patch Clearing flags on attachment: 223484 Committed
r163699
: <
http://trac.webkit.org/changeset/163699
>
WebKit Commit Bot
Comment 7
2014-02-08 00:22:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug