[GTK] Minibrowser: Matched words of a searched text are not highlighted after reopening search bar https://bugs.webkit.org/show_bug.cgi?id=128380

Patch by Diego Pino Garcia <dpino@igalia.com> on 2014-02-08
Reviewed by Carlos Garcia Campos.

When open the search bar, perform last search if there is any.

* MiniBrowser/gtk/BrowserSearchBar.c:
(browser_search_bar_open):

Canonical link: https://commits.webkit.org/146467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163699 268f45cc-cd09-0410-ab3c-d52691b4dbfc